--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 				<div class="walk">:v</div>
 			</centre>
 		</div>
+		<div id="Text">
+			<marquee><h1>hey guys check out my cool gmod server :DDDDDDDDDD</h1></marquee>
+		</div>
 	</body>
 </html>
