--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<img src="img/logo.png">
 			<centre>
 				<br><br>
-				<div class="walk">:v</div>
+				<div class="walk">:D</div>
 			</centre>
 		</div>
 		<div id="Text">
