--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/animations.css">
 	</head>
 	<body>
+		<audio src="bgm.mp3" autoplay loop></audio>
 		<div id="container">
 			<img src="img/logo.png">
 			<centre>
@@ -15,7 +16,7 @@
 				<div class="walk">:D</div>
 			</centre>
 		</div>
-		<div id="Text">
+		<div id="funnytext">
 			<marquee><h1>hey guys check out my cool gmod server :DDDDDDDDDD</h1></marquee>
 		</div>
 	</body>
