--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 		<link rel="stylesheet" type="text/css" href="css/animations.css">
 	</head>
 	<body>
-		<audio src="bgm2.ogg" autoplay loop></audio>
+		<audio src="bgm2.mp3" autoplay loop></audio>
 		<div id="container">
 			<img src="img/logo.png">
 			<centre>
-				<br><br>
-				<div class="walk">:D</div>
+				<marquee>
+					<br><br>
+					<div class="walk">:D</div>
+				</marquee>
 			</centre>
 		</div>
 		<div id="funnytext">
