--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				<marquee>
 					<br><br>
 					<div class="walk">:D</div>
+					<div class="shadow"></div>
 				</marquee>
 			</centre>
 		</div>
