--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<marquee>
 					<br><br>
 					<div class="walk">:D</div>
-					<div class="shadow"><img src="img/shadow.png"></div>
+					<div class="shadow"><img src="img/shadow 2.png"></div>
 				</marquee>
 			</centre>
 		</div>
