--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div id="funnytext">
 			<marquee><h1>hey guys check out my cool gmod server :DDDDDDDDDD</h1></marquee>
-			<h4>♫ Ending - Pac-Man Arrangement</h4>
+			<h4>♫ NeoMAX - DM Ashura (for Stepmania)</h4>
 		</div>
 	</body>
 </html>
