--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/animations.css">
 	</head>
 	<body>
-		<audio src="bgm2.mp3" autoplay loop></audio>
+		<audio src="neoMAX.mp3" autoplay loop></audio>
 		<div id="container">
 			<img src="img/logo.png">
 			<centre>
