--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<centre>
 				<marquee>
 					<br><br>
-					<div class="walk">:D</div>
+					<div class="walk">:3</div>
 					<div class="shadow"><img src="img/shadow 2.png"></div>
 				</marquee>
 			</centre>
