Added music menu
Got sick of the bgm playing automatically so i made it a manual choice instead

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" type="text/css" href="css/animations.css">
 	</head>
 	<body>
-		<audio src="neoMAX.mp3" autoplay loop></audio>
 		<div id="container">
 			<img src="img/logo.png">
 			<centre>
@@ -22,6 +21,17 @@
 		<div id="funnytext">
 			<marquee><h1>hey guys check out my cool gmod server :DDDDDDDDDD</h1></marquee>
 			<h4>♫ NeoMAX - DM Ashura (for Stepmania)</h4>
+		</div>
+		<div id="musicmenu">
+			<h2>heres some low-quality background music, have fun :)</h2>
+			<h4>♫ Ending 1 (Music List) - DDRMAX</h4>
+			<audio controls src="bgm.mp3" loop></audio>
+			<hr>
+			<h4>♫ Ending - Pac-Man Arrangement</h4>
+			<audio controls src="bgm2.mp3" loop></audio>
+			<hr>
+			<h4>♫ NeoMAX - DM Ashura</h4>
+			<audio controls src="neoMAX.mp3" loop></audio>
 		</div>
 	</body>
 </html>
