added the new music files
added them

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 		</div>
 		<div id="funnytext">
 			<marquee><h1>hey guys check out my cool gmod server :DDDDDDDDDD</h1></marquee>
-			<h4>♫ NeoMAX - DM Ashura (for Stepmania)</h4>
 		</div>
 		<div id="musicmenu">
-			<h2>heres some low-quality background music, have fun :)</h2>
+			<h2>heres some low-quality background music for dapper to listen to</h2>
+			<hr>
 			<h4>♫ Ending 1 (Music List) - DDRMAX</h4>
 			<audio controls src="bgm.mp3" loop></audio>
 			<hr>
@@ -32,6 +32,18 @@
 			<hr>
 			<h4>♫ NeoMAX - DM Ashura</h4>
 			<audio controls src="neoMAX.mp3" loop></audio>
+			<hr>
+			<h4>♫ FIRE TEMPLE - ヒゲドライバー (Hige Driver)</h4>
+			<audio controls src="FIRE TEMPLE.mp3" loop></audio>
+			<hr>
+			<h4>♫ Eternal Fort (Guitar Cover) - Christopher Rios Lillo</h4>
+			<audio controls src="eternal fort.mp3" loop></audio>
+			<hr>
+			<h4>♫ Grabbag - Duke Nukem 3D</h4>
+			<audio controls src="grabbag.mp3" loop></audio>
+			<hr>
+			<h4>♫ Fart With Extra Reverb - ¯\_(ツ)_/¯</h4>
+			<audio controls src="fart_with_extra_reverb.mp3.mp3" loop></audio>
 		</div>
 	</body>
 </html>
