--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 		<title>Garry's Mod Loading Screen</title>
 		<meta charset="utf-8">
 		<link rel="icon" type="image/png" href="img/icon.png">
+		
 		<link rel="stylesheet" type="text/css" href="css/loading.css">
 		<link rel="stylesheet" type="text/css" href="css/animations.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@400;900&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div id="container">
