--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<title>Garry's Mod Loading Screen</title>
 		<meta charset="utf-8">
 		<link rel="icon" type="image/png" href="img/icon.png">
+		<link rel="stylesheet" type="text/css" href="css/loading.css">
+		<link rel="stylesheet" type="text/css" href="css/animations.css">
+		
+		<style>
+		  @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@400;900&display=swap');
+		</style>
 	</head>
 	<body>
 		<div id="container">
